--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,12 @@
     @apply border-border;
   }
 
+  html {
+    height: 100%;
+  }
+
   body {
-    @apply bg-background text-foreground;
+    min-height: 100%;
+    @apply bg-background text-foreground antialiased;
   }
 }
